--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "rust_clayout"
+name = "catplush"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 log = "0.4.28"
-raylib = "5.5.0"
+frienderer = { git = "https://git.speykious.dev/Speykious/frienderer.git", version = "0.1.0", rev = "f15f24113b" }
+parley = "0.7.0"
+image = "0.25.9"
+glow = "0.16.0"
+glam = "0.30.9"
