--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 log = "0.4.28"
 frienderer = { git = "https://git.speykious.dev/Speykious/frienderer.git", version = "0.1.0", rev = "0f03b60", default-features = false }
-image = "0.25.9"
+image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
 glow = "0.16.0"
 glam = "0.30.9"
-glfw = "0.61.0"
+glfw = { version = "0.61.0", default-features = false, features = ["log", "wayland", "x11", "raw-window-handle-v0-6"] }
